<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sb"
        android:layout_alignLeft="@+id/sb"
        android:text="@string/Volume"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <SeekBar
        android:id="@+id/sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear"
        android:layout_alignParentRight="true"
        android:max="100" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Play"
            android:src="@drawable/ic_action_play_over_video" />

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stop"
            android:src="@drawable/ic_action_stop" />
                
        <ImageButton
            android:id="@+id/txt_sair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_sair"
            android:src="@drawable/ic_action_remove" />

        <ImageButton
            android:id="@+id/informacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/informacoes"
            android:src="@drawable/ic_action_about" />


    </LinearLayout>

    <ImageView
        android:id="@+id/boneco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/twitter"
        android:layout_alignLeft="@+id/Volume"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="true"
        android:contentDescription="@string/boneco"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:src="@drawable/boneco" />

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/facebook"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/facebook"
        android:adjustViewBounds="true"
        android:contentDescription="@string/twitter"
        android:maxWidth="50dp"
        android:src="@drawable/twitter" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Volume"
        android:layout_alignLeft="@+id/linear"
        android:layout_marginBottom="18dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/facebook"
        android:maxWidth="50dp"
        android:src="@drawable/facebook" />

    <ImageView
        android:id="@+id/youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/twitter"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/twitter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/youtube"
        android:maxWidth="50dp"
        android:src="@drawable/youtube" />

    <ImageView
        android:id="@+id/feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/youtube"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/youtube"
        android:adjustViewBounds="true"
        android:contentDescription="@string/feed"
        android:maxWidth="50dp"
        android:src="@drawable/feed" />

</RelativeLayout>